fixing alignment

--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -15,8 +15,8 @@ td table {
    width: 100%;
 }
 
-td input[type="text"] {
-   width: 100%;
+input[type="text"] {
+   float: right;
 }
 
 .history td {
